2007-01-09  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_menuitem):
	- Draw the border around the whole menuitem including the sides.

2007-01-08  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.ac:

	Updated for 2.9.1 release

2007-01-08  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/Makefile.am:
	- Add DIST_SUBDIRS with all subdirs. This fixes make distcheck.

2007-01-08  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_progressbar_trough),
	(clearlooks_draw_progressbar_fill):
	- Added save/restore to _trough.
	- Sanity check for the radius in _trough.
	- Radius support for the fill.

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	- Again adjust the clip region differently. Only one pixel now, but
	in both direction if it is pulsing.

	* engines/support/cairo-support.c: (ge_cairo_rounded_rectangle):
	- Use cairo_rectangle if no corner is set.
	- Fix bug causing too many warnings 

2007-01-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/Makefile.am:
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	Rename clearlooks_style_glossy.c to clearlooks_draw_glossy.c

2007-01-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_progressbar_trough),
	(clearlooks_draw_progressbar_fill):
	- Follow the radius option when drawing the trough.
	- Cleaned up progressbar_fill

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Adjust the clip region by 3 pixel instead of one.

	* themes/Clearlooks/gtk-2.0/gtkrc:
	- Set the radius to 1.5 for the progress bar.

2007-01-05  Thomas Wood  <thos@gnome.org>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_menuitem):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	* engines/clearlooks/src/clearlooks_style_glossy.c: